possible ICE fix + make disabled buttons transparent on mobile + non-restricted test environments

--- a/shared/css/cyph.im.scss
+++ b/shared/css/cyph.im.scss
@@ -379,6 +379,9 @@ html:not(.mobile) .video-call-button {
 	margin-right: 10px;
 	margin-top: 10px;
 }
+html.mobile button[disabled] {
+	opacity: 0.25;
+}
 
 html:not(.video) #video-call {
 	display: none;
